--- a/src/components/Seat.css
+++ b/src/components/Seat.css
@@ -24,7 +24,7 @@
 }
 
 h1{
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace;
     font-weight: 100;
-    color: black;
+    color: black; */
 }
