--- a/src/App.css
+++ b/src/App.css
@@ -206,4 +206,9 @@
   .image-loop-item:hover {
 	transform: scale(1.1); 
   }
-  
+  @media (max-width: 600px) {
+	.home-bannerImage-container,
+	.about-background-image-container {
+	  display: none;
+	}
+  }
