--- a/src/App.css
+++ b/src/App.css
@@ -185,25 +185,37 @@
   }
 }
 
-
-.image-loop-container {
+.image-gallery {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	overflow: hidden;
   }
   
-  .image-loop-item {
-	width: 800px; 
-	height: 300px; 
+  .image-item {
 	margin: 10px;
-	object-fit: cover; 
-	border-radius: 50px;
-	overflow: hidden;
-	transition: transform 0.3s ease; 
-  }  
- 
-  .image-loop-item:hover {
-	transform: scale(1.1); 
+	text-align: center;
   }
+  
+  .image {
+	width: 300px;
+	height: 500px;
+	object-fit: cover;
+	border-radius: 5px;
+	transition: transform 0.3s ease;
+  }
+  
+  .image:hover {
+	transform: scale(1.1);
+	filter: brightness(0.2);
+  }
+  
+  .image-details {
+	margin-top: 10px;
+	top: 50%;
+	color:#ffffff;
+	font-size: 28px;
+	font-weight: bold;
+	position: absolute;
+  }
+  
   
