--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,22 +2,29 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    font-size: 45px;
+    font-size: 15px;
     font-color: red;
 
   }
- .
+ .Journey {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-size: 15px;
+  
+
+  }
   
   .services ul {
-    list-style: disc;
-    margin-left: 20px;
-    font-size: 45px;
-    align-items: start;
+    list-style:square;
+justify-content: flex-start;
+    font-size: 15px;
+    align-items: flex-start;
   }
   
   .user-reviews {
     margin-top: 20px;
-    font-size: 50px;
+    font-size: 30px;
   }
   
   .review {
@@ -40,8 +47,11 @@
   
   .contact-info {
     margin-top: 20px;
-    font-size: 45px;
+    font-size: 20px;
 
+  }
+  .p {
+    font-size: 25px;
   }
   
   /* Add more styling as needed */
