--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -128,7 +128,7 @@
   }
   
   .card .card_title {
-    text-align: ;
+    text-align:center;
     border-radius: 0px 0px 40px 40px;
     font-family: sans-serif;
     font-weight: bold;
