--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -17,6 +17,9 @@
   .nav-links {
     list-style: none;
     display: flex;
+    float: right;
+    margin-left: 1000px;
+    
   }
   
   .nav-links li {
