--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -112,6 +112,8 @@
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
     cursor: pointer;
     transition: 0.4s;
+    justify-content: center; /* Vertically center content */
+  align-items: center;
   }
   
   .card .card_image {
@@ -133,8 +135,10 @@
     font-family: sans-serif;
     font-weight: bold;
     font-size: 30px;
-    margin-top: -80px;
+    margin-top: -180px;
     height: 40px;
+    justify-content: center; /* Vertically center content */
+  align-items: center;
   }
   
   .card:hover {
