--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -178,3 +178,25 @@
     transition: 0.4s;
   }
   */
+
+
+
+  .features {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 30px;
+  }
+  
+  .feature {
+    flex: 1;
+  }
+  
+  .feature img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
