--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -109,7 +109,7 @@
     width: 280px;
     height: 280px;
     border-radius: 8px;
-  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  /* box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22); */
     cursor: pointer;
     transition: 0.4s;
     justify-content: center; /* Vertically center content */
