--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,7 +5,7 @@
   }
   
   .search-bar {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
   
   .search-bar form {
@@ -14,17 +14,23 @@
   }
   
   .search-bar input {
-    padding: 8px;
+    padding: 8px 8px;
     margin-right: 10px;
+    margin-top: 7px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    height: 29px;
+    width: 800px;
+
   }
   
   .search-bar button {
-    padding: 8px 12px;
+    padding: 8px 8px ;
+    height: 46px;
+    width: 88px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: #0008ff;
     color: white;
     cursor: pointer;
   }
