--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -30,7 +30,7 @@
 
   /* Style form elements */
   .details {
-    margin-bottom: 20px;
+    margin-bottom: 5px;
   }
   
   .details label {
@@ -55,6 +55,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 8px;
   }
   
   button:hover {
